Show no-criteria works in filtered WorkList